<resources>
    <string name="app_name">CryptoCurrency Application</string>
    <string name="valid_password">Please enter a valid password</string>
    <string name="valid_mail_address">Please enter a valid Mail Address</string>
    <string name="sign_in">Sign In</string>
    <string name="vide">Vide</string>
    <string name="pw_error_message"><![CDATA[The password must contain minimum 8 characters, at least 1 letter and 1 number, no special characters : &é)^]]></string>
    <string name="login_button_error_message"><![CDATA[Invalid Password or Email]]></string>
    <string name="email_not_valid">Email not valid</string>
    <string name="enter_your_mail_address">Enter Your Mail Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="crypto_image">crypto_image</string>
    <string name="country">Country :</string>
    <string name="titre">Titre</string>
    <string name="text">text</string>
    <string name="score">Score :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagecryptocurr">ImageCryptoCurr</string>
    <string name="textview">TextView</string>
    <string name="trust_score">trust score :</string>
    <string name="trading_incentive">trading_incentive :</string>
    <string name="trade_volume_24h_btc">trade_volume_24h_btc :</string>
    <string name="trade_volume_24h_btc_normalized">trade_volume_24h_btc_normalized :</string>
    <string name="value">VALUE</string>
    <string name="password">Password</string>
    <string name="mail_address">Mail Address</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="login_page">Login Page</string>
    <string name="logo">Logo</string>
</resources>